Fix alignment of thumbnails.
On some page in the "Political Ecologies in the Renaissance" exhibition,
the thumbnails were not lining up properly, where a space may be skipped
due to the height of the thumbnail above the space.

--- a/css/screen.css
+++ b/css/screen.css
@@ -701,6 +701,7 @@ p.copyright-footer a {
   padding: 0px;
   margin-bottom: 2%;
   float: none;
+  height: inherit;
 }
 
 .layout-gallery .exhibit-item.exhibit-gallery-item {
@@ -711,6 +712,7 @@ p.copyright-footer a {
 
 .layout-gallery .gallery .exhibit-item.exhibit-gallery-item {
   width: 200px;
+  height: 230px;
   padding: 10px;
   float: left;
   text-align: center;
